# our_blog

./: .flake8  .gitignore  README.md  pyproject.toml
blog/authapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/authapp/migrations/: 0001_initial.py  0002_alter_bloguserprofile_age.py  0003_alter_bloguserprofile_avatar.py  0004_alter_bloguserprofile_avatar.py
blog/blog/: .env.template  settings.py  urls.py
blog/mainapp/: admin.py  forms.py  models.py  urls.py  views.py
blog/mainapp/migrations/: 0001_initial.py  0002_alter_post_options_remove_comment_published_at_and_more.py  0003_remove_comment_url_remove_post_url_and_more.py  0004_alter_comment_options_remove_comment_parent_id_and_more.py  0004_alter_post_status.py  0005_merge_20220825_1938.py  0005_merge_20220825_1946.py  0005_merge_20220826_1125.py  0006_merge_20220829_1633.py
blog/mainapp/templatetags/: category.py
blog/static/css/: style.css
blog/static_all/css/: style.css
blog/templates/: base.html  base_auth.html  base_for_all.html  footer.html  header.html  home.html  navigation.html  sidebar.html
blog/templates/authapp/: login.html  login1.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_subject.txt  profile.html  signup.html
blog/templates/mainapp/: inc-tags.html  index.html  pagination.html  post_confirm_delete.html  post_create_form.html  post_detail.html  post_form.html  post_list.html  post_update_form.html  search_results.html  users_comments_list.html  (+1 more)
(+1 files in other folders)
