[tool.poetry]
name = "our_blog"
version = "0.1.0"
description = "course project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.13.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
